--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,9 @@
                 android:textSize="16sp"
                 android:layout_marginTop="15dp"
                 android:text="@string/login"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:onClick="logIn"
+            />
 
             <LinearLayout
                 android:layout_width="match_parent"
