--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -14,42 +14,11 @@
             android:orientation="vertical">
 
         <include layout="@layout/top_toolbar" />
-
-        <android.support.design.button.MaterialButton
-                android:id="@+id/get_movie_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                android:layout_marginTop="15dp"
-                android:text="@string/login"
-                android:textColor="@color/white"
-                android:onClick="showAllMovie"
-        />
-
-        <EditText
-                android:id="@+id/id_movie"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:gravity="center"
-                android:hint="@string/id_movie"
-                android:maxLength="14" />
-
-        <android.support.design.button.MaterialButton
-                android:id="@+id/get_movie_by_id_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                android:layout_marginTop="15dp"
-                android:text="@string/get_movie"
-                android:textColor="@color/white"
-                android:onClick="showMovieById"
-        />
-
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
     </LinearLayout>
 
