--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,14 @@
         android:id="@+id/top-toolbar"
         layout="@layout/top_toolbar" />
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="fill_parent"-->
-        <!--android:background="@color/white"-->
-        <!--android:layout_marginBottom="55dp"-->
-        <!--android:layout_marginTop="55dp"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<ListView-->
-            <!--android:id="@+id/list"-->
-            <!--android:layout_below="@id/top-toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent" />-->
-
-
-    <!--</LinearLayout>-->
+    <ProgressBar
+        android:id="@+id/progressBarMovies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        />
 
     <FrameLayout
         android:id="@+id/frame_container"
