--- a/app/src/main/res/layout/actor_item_row.xml
+++ b/app/src/main/res/layout/actor_item_row.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/front_image"
+        android:layout_toEndOf="@+id/image"
         android:fontFamily="@font/roboto"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@android:color/black" />
