--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
                 android:hint="@string/username">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/username_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -66,6 +67,19 @@
                 android:text="@string/login"
                 android:textColor="@color/white"
                 android:onClick="logIn"
+            />
+
+            <android.support.design.button.MaterialButton
+                    android:id="@+id/next_buttson"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/login"
+                    android:textColor="@color/white"
+                    android:onClick="testActor"
             />
 
             <LinearLayout
