--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_recommendations"
         android:enabled="true"
         android:icon="@drawable/recommendation_icons"
-        android:title="@string/recommendations" />
+        android:title="@string/recommendations"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_actors"
         android:enabled="true"
         android:icon="@drawable/actors_icon"
-        android:title="@string/actors" />
+        android:title="@string/actors"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/action_movies"
         android:enabled="true"
         android:icon="@drawable/movies_icon"
-        android:title="@string/movies" />
+        android:title="@string/movies"
+        app:showAsAction="ifRoom"/>
 </menu>
