--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#a92626</color>
     <color name="colorAccent">#a92626</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#D3D3D3</color>
 </resources>
