--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".view.LoginActivity">
 
     <LinearLayout
@@ -69,19 +70,6 @@
                 android:onClick="logIn"
             />
 
-            <android.support.design.button.MaterialButton
-                    android:id="@+id/next_buttson"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:textAllCaps="false"
-                    android:textSize="16sp"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/login"
-                    android:textColor="@color/white"
-                    android:onClick="testActor"
-            />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -120,12 +108,17 @@
                 </RelativeLayout>
             </LinearLayout>
 
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/sign_in_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                app:buttonSize="wide" />
+            <android.support.design.button.MaterialButton
+                    android:id="@+id/register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/register"
+                    android:textColor="@color/white"
+            />
         </LinearLayout>
 
     </LinearLayout>
