--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -1,14 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:id="@+id/actors_fragment"
-    tools:context=".view.fragments.ActorsFragment">
+    android:id="@+id/reviews_fragment"
+    tools:context=".view.fragments.ReviewsFragment">
 
     <students.com.movierecommender.view.NestedListView
-        android:id="@+id/list"
+        android:id="@+id/review_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
